fix: styling, spacing + cleanup content

--- a/src/components/Careers/Values/styles.module.css
+++ b/src/components/Careers/Values/styles.module.css
@@ -8,7 +8,7 @@
   position: relative;
   margin-top: 54px;
   margin-bottom: 48px;
-  width: calc(100vw - 100px);
+  width: calc(100% - 100px);
 }
 
 .tree::after {
@@ -21,6 +21,7 @@
 }
 
 .rule {
+  margin: 0;
   border: unset;
   border-top: 1px solid var(--mui-palette-border-main);
 }
@@ -42,7 +43,7 @@
   left: 100%;
 }
 
-.greenText {
+.title span {
   color: var(--mui-palette-primary-main);
 }
 
@@ -57,6 +58,7 @@
 }
 
 .desc {
+  max-width: 400px;
   margin-bottom: 46px;
 }
 
@@ -77,7 +79,7 @@
 
 @media (min-width: 600px) {
   .tree {
-    width: calc(100vw - 200px);
+    width: calc(100% - 200px);
   }
 }
 
